--- a/styles/Burger.scss
+++ b/styles/Burger.scss
@@ -108,3 +108,84 @@
 	margin: 0 auto;
 	transform-origin: center;
 }
+
+.nav__toggle.mob {
+	position: fixed;
+	top: 0;
+	left: -200%;
+	right: 0;
+	bottom: 0;
+
+	width: 100%;
+	height: 100vh;
+
+	background: #fff;
+	transition: 0.3s;
+	z-index: 2;
+	&.active {
+		left: 0;
+	}
+	.container__form {
+		width: 500px;
+	}
+	.container__mob {
+		display: flex;
+		flex-direction: column;
+		padding: 50% 10%;
+		margin: 0 auto;
+		.nav-link {
+			font-size: 50px;
+			color: var(--black);
+			line-height: 50px;
+			padding: 10px 0;
+			position: relative;
+			&.active:before {
+				display: block;
+				width: 100%;
+				height: 50px;
+				content: "";
+				background: var(--red);
+
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				transition: 0.3s;
+				animation: appear 0.3s ease-in;
+				z-index: -1;
+			}
+		}
+		.logo {
+			font-size: 20px;
+			line-height: 22px;
+			font-weight: bold;
+			color: transparent;
+
+			position: absolute;
+			right: 0;
+			top: 61px;
+		}
+	}
+}
+
+a.logo__mob {
+	font-size: 20px;
+	line-height: 22px;
+	font-weight: bold;
+
+	width: 150px;
+	height: 50px;
+
+	position: absolute;
+	right: 42px;
+	top: 40px;
+	background: url("../assets/img/logo.png") 50% 50% / contain no-repeat;
+	color: transparent;
+	z-index: 999999;
+	@media (max-width: 375px) {
+		width: 100px;
+		@media (max-width: 320px) {
+			width: 80px;
+		}
+	}
+}
