--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -194,7 +194,7 @@
 				}
 			}
 			&:hover {
-				transform: none;
+				transform: translate(0, -50%) rotate(-90deg) translateY(20%);
 			}
 		}
 	}
